--- a/src/App.scss
+++ b/src/App.scss
@@ -49,7 +49,7 @@ div#root {
   background-position-x: center;
   background-size: cover;
   background-attachment: fixed;
-  box-shadow: inset 0 0 2000px 20000px rgba(0,0,0,0.25);
+  box-shadow: inset 0 0 2000px 20000px rgba(0, 0, 0, 0.25);
 }
 
 .class-z-index-10000-header {
@@ -74,7 +74,6 @@ div#root {
   top: 0;
   left: 0;
 }
-
 
 @media screen and (max-width: 1600px) {
 }
