--- a/src/modules/components/[0_grouped_0]-Profile/gallery/EditAddPost.module.scss
+++ b/src/modules/components/[0_grouped_0]-Profile/gallery/EditAddPost.module.scss
@@ -45,7 +45,7 @@
   display: flex;
   flex-direction: row;
   justify-content: flex-start;
-  width: auto;
+  width: 100%;
   height: auto;
 
   .left {
@@ -62,7 +62,7 @@
 
       .listParameter {
         display: flex;
-        width: 68%;
+        width: 97%;
         height: auto;
         border: 1px solid $color-22;
         border-radius: 5px;
@@ -74,7 +74,6 @@
         padding: 5px;
         background: $color-7;
         transition: all 0.35s ease;
-        margin-left: 8px;
 
         &:hover,
         &:active,
@@ -109,6 +108,13 @@
     flex-direction: column;
     margin-left: 15px;
 
+    .warmContainer {
+      display: flex;
+      width: 100%;
+      height: auto;
+      margin-bottom: 10px;
+    }
+
     .interfaceUserAdd {
       display: flex;
       flex-direction: column;
@@ -126,8 +132,10 @@
         width: 100%;
         height: 32px;
         line-height: 32px;
-        font-size: 18px;
+        font-size: 16px;
+        padding-left: 8px;
         font-weight: 400;
+        font-family: $fontCustom2;
       }
 
       form {
@@ -263,5 +271,114 @@
         }
       }
     }
+
+    .fillTextBlock {
+      display: flex;
+      flex-direction: column;
+      width: auto;
+      height: auto;
+      background: $color-7;
+      border: 1px solid $color-22;
+      border-radius: 5px;
+      padding: 8px;
+      margin-top: 15px;
+
+      .titleCheck {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        margin-top: 8px;
+
+        &:nth-child(1) {
+          margin-top: 0;
+        }
+      }
+
+      .title {
+        font-weight: 400;
+        font-size: 16px;
+        color: $color-3;
+        line-height: 32px;
+        height: 32px;
+        width: auto;
+        font-family: $fontCustom2;
+        position: relative;
+        padding-left: 8px;
+
+        .error {
+          margin-left: auto;
+          font-size: 14px;
+          color: $color-9;
+          opacity: 1;
+        }
+
+        .true {
+          margin-left: auto;
+          font-size: 14px;
+          color: $color-3;
+        }
+      }
+
+      .in {
+        width: 100%;
+        min-width: 100%;
+        max-width: 806px;
+        line-height: 24px;
+        height: auto;
+        min-height: 34px;
+        max-height: 180px;
+        vertical-align: bottom;
+        padding: 5px;
+        outline: none;
+        font-size: 14px;
+        border: 1px solid $color-22;
+        border-radius: 3px;
+        color: $color-8;
+        background: $color-21;
+        transition: all 0.35s ease;
+
+        &:hover,
+        &:active,
+        &:focus {
+          outline: none;
+        }
+      }
+    }
+
+    .wrapperBtn {
+      display: flex;
+      margin: auto auto 0 auto;
+
+      button {
+        height: 32px;
+        line-height: 32px;
+        border: none;
+        border-radius: 5px;
+        color: $color-3;
+        padding: 0 24px;
+        outline: none;
+        font-weight: 400;
+        font-size: 16px;
+        cursor: pointer;
+        transition: all 0.35s ease;
+        margin: 0 10px;
+        background: $color-4;
+
+        &:active,
+        &:hover,
+        &:focus,
+        &:visited {
+          outline: none;
+          border: none;
+        }
+
+        &:hover {
+          background: $color-6;
+          color: $color-2;
+        }
+      }
+    }
   }
+
+
 }
