--- a/src/modules/pages/cab/Cab.scss
+++ b/src/modules/pages/cab/Cab.scss
@@ -37,13 +37,14 @@
 
     .bt-ph {
       display: none;
-      z-index: 8500;
+      //z-index: 8500;
+      z-index: 1;
     }
   }
 }
 
 .col-1 {
-  z-index: 8000;
+  //z-index: 8000;
   width: 275px;
   min-width: 275px;
   max-width: 275px;
@@ -105,7 +106,7 @@
 }
 
 .col-2 {
-  z-index: 7000;
+  //z-index: 7000;
   width: 100%;
   height: 100%;
   padding: 15px;
