--- a/src/modules/pages/gallery/Gallery.module.scss
+++ b/src/modules/pages/gallery/Gallery.module.scss
@@ -182,12 +182,22 @@ body {
       }
     }
 
-    .galleryWrapper {
+    .galleryBackground {
+      background: $color-7;
+      border: 1px solid $color-22;
+      border-radius: 5px;
       width: 100%;
-      max-width: 1100px !important;
+      max-width: 90%;
       margin: 0 auto;
-      max-height: 700px;
-      height: auto;
+      padding: 15px;
+
+      .galleryWrapper {
+        width: 100%;
+        max-width: 1100px !important;
+        margin: 0 auto;
+        max-height: 700px;
+        height: auto;
+      }
     }
 
     .containerDescription {
