--- a/src/modules/components/[0_grouped_0]-Profile/gallery/EditAddPost.module.scss
+++ b/src/modules/components/[0_grouped_0]-Profile/gallery/EditAddPost.module.scss
@@ -349,7 +349,7 @@
       display: flex;
       margin: auto auto 0 auto;
 
-      button {
+      .save {
         height: 32px;
         line-height: 32px;
         border: none;
