--- a/src/modules/pages/admin-dashboard/Admin-dashboard.scss
+++ b/src/modules/pages/admin-dashboard/Admin-dashboard.scss
@@ -150,7 +150,7 @@
       width: 200px !important;
     }
 
-    .age-stat-table{
+    .age-stat-table {
       width: 100px !important;
     }
 
@@ -341,32 +341,236 @@ body {
         width: 100%;
         height: auto;
 
-        .player-image {
-          width: 150px;
-          height: 150px;
-          margin: 10px;
-          border: none;
-          border-radius: 8px;
-          overflow: hidden;
+        .wrapperActionsAndIcon {
+          display: flex;
+          flex-direction: column;
+          justify-content: flex-start;
+
+          .player-image {
+            width: 150px;
+            min-width: 150px;
+            max-width: 150px;
+            height: 150px;
+            min-height: 150px;
+            max-height: 150px;
+            margin: 10px;
+            border: none;
+            border-radius: 8px;
+          }
+
+          .buttonSubmit {
+            width: auto;
+            height: 24px;
+            margin: 10px;
+            line-height: 24px;
+            text-align: center;
+            outline: none;
+            background: $color-7;
+            border: 0.5px solid $color-22;
+            border-radius: 3px;
+            transition: all 0.25s ease-in-out;
+            color: $color-8;
+            cursor: pointer;
+            font-size: 14px;
+
+            &:hover,
+            &:focus,
+            &:active {
+              outline: none;
+              background: $color-11;
+            }
+          }
         }
 
         .text-container {
+          display: flex;
+          flex-direction: column;
+          width: 100%;
+          height: auto;
           padding: 5px 5px 5px 0;
-          .text-p {
-            width: auto;
-            height: auto;
-            min-height: 24px;
-            line-height: 24px;
-            font-weight: 400;
-            font-size: 16px;
-            color: $color-3;
 
-            span {
-              padding-left: 5px;
-              font-style: italic;
+          .oneBlock {
+            display: flex;
+            flex-direction: row;
+            width: 100%;
+            min-width: 500px;
+            max-width: 1645px;
+            padding: 5px;
+            margin: 5px 5px 5px 0;
+            background: $color-7;
+            border: 1px solid $color-22;
+            border-radius: 5px;
+
+            .text-p {
+              width: auto;
+              height: 24px;
+              line-height: 24px;
+              font-weight: 400;
+              font-size: 16px;
+              color: $color-3;
+            }
+
+            .lime {
+              width: auto;
+              height: 24px;
+              line-height: 24px;
+              font-weight: 400;
+              font-size: 16px;
+              margin-left: 5px;
               color: $color-8;
             }
+
+            input[type="date"] {
+              &::-webkit-calendar-picker-indicator {
+                transition: all 0.35s ease;
+                filter: invert(50%);
+                cursor: pointer;
+
+                &:hover {
+                  filter: invert(100%);
+                }
+              }
+            }
+
+            .input-redactor {
+              width: auto;
+              min-width: 200px;
+              max-width: 900px;
+              margin-left: 5px;
+              height: 24px;
+              line-height: 24px;
+              min-height: 24px;
+              max-height: 100px;
+              font-weight: 400;
+              font-size: 16px;
+              padding: 0 6px 0 0;
+              outline: none;
+              border-radius: 3px;
+              border: none;
+              transition: all 0.35s ease;
+              color: $color-8;
+              background: transparent;
+
+              &:hover,
+              &:focus,
+              &:active {
+                outline: none;
+                border: none !important;
+              }
+
+              &:hover {
+                color: $color-1;
+              }
+
+              &:focus {
+                color: $color-1;
+                border: 1px solid $color-22 !important;
+              }
+
+            }
+
+            .viewRedactor {
+              width: 24px;
+              min-width: 24px;
+              max-width: 24px;
+              min-height: 24px;
+              line-height: 24px;
+              font-weight: 400;
+              font-size: 16px;
+              color: $color-1;
+              margin-left: auto;
+            }
           }
+        }
+      }
+    }
+
+    .card-log {
+      display: flex;
+      flex-direction: row;
+      justify-content: center;
+      padding: 15px;
+
+      .table-log {
+        width: auto;
+        max-width: 100%;
+        border: 1px solid $color-22;
+        background: $color-7;
+        margin: 0;
+
+        .log-thead {
+        }
+
+        .log-tbody {
+        }
+
+        .log-rows {
+          height: auto;
+          min-height: 36px;
+          max-height: 36px;
+          line-height: 36px;
+          border-top: 1px solid $color-22;
+          transition: all 0.20s ease;
+
+          &:nth-child(even) {
+            background-color: lighten($color-7, 1);
+          }
+
+          &:nth-child(odd) {
+            background-color: lighten($color-7, 2);
+          }
+        }
+
+        .log-columns {
+          width: auto;
+          min-width: 250px;
+          color: $color-3;
+          font-weight: 400;
+          font-size: 16px;
+          border-left: 1px solid $color-22;
+          transition: all 0.15s ease;
+
+          &:hover {
+            color: lighten($color-8, 20%) !important;
+          }
+
+          &:nth-child(1) {
+            border: none;
+            width: 250px;
+          }
+        }
+
+        .log-input {
+          width: 100%;
+          height: 36px;
+          line-height: 36px;
+          outline: none;
+          border: none;
+          border-radius: 0;
+          background: transparent;
+          color: $color-3;
+          transition: all 0.3s ease;
+          padding: 0 6px;
+
+          &:hover {
+            color: $color-8;
+          }
+
+          &:focus {
+            color: $color-1;
+          }
+        }
+
+        .time {
+          width: 250px;
+        }
+
+        .log {
+          width: 600px;
+        }
+
+        .manager {
+          width: 250px;
         }
       }
     }
