--- a/src/modules/pages/admin-dashboard/Admin-dashboard.scss
+++ b/src/modules/pages/admin-dashboard/Admin-dashboard.scss
@@ -154,6 +154,15 @@
       width: 100px !important;
     }
 
+    .textP {
+      width: 100%;
+      height: 35px;
+      line-height: 35px;
+      font-size: 14px;
+      text-align: start;
+      padding: 0 10px;
+    }
+
     .in-manager {
       border: none;
       border-radius: 0;
