--- a/src/modules/pages/admin-dashboard/Admin-dashboard.scss
+++ b/src/modules/pages/admin-dashboard/Admin-dashboard.scss
@@ -412,6 +412,7 @@ body {
 
             .text-p {
               width: auto;
+              min-width: max-content;
               height: 24px;
               line-height: 24px;
               font-weight: 400;
@@ -421,7 +422,9 @@ body {
 
             .lime {
               width: auto;
-              height: 24px;
+              height: auto;
+              min-height: 24px;
+              max-height: none;
               line-height: 24px;
               font-weight: 400;
               font-size: 16px;
@@ -443,13 +446,13 @@ body {
 
             .input-redactor {
               width: auto;
-              min-width: 200px;
-              max-width: 900px;
+              min-width: 400px;
+              max-width: 1500px;
               margin-left: 5px;
-              height: 24px;
+              height: auto;
               line-height: 24px;
               min-height: 24px;
-              max-height: 100px;
+              max-height: 200px;
               font-weight: 400;
               font-size: 16px;
               padding: 0 6px 0 0;
