--- a/src/modules/pages/texture-pack/TexturePack.module.scss
+++ b/src/modules/pages/texture-pack/TexturePack.module.scss
@@ -23,6 +23,7 @@
       font-weight: 400;
       color: $color-3;
       margin: 15px auto 22px auto;
+      font-family: $fontCustom2;
     }
 
     .texturePackInformation {
