--- a/src/modules/components/[0_grouped_0]-Generals/mode/Mode.module.scss
+++ b/src/modules/components/[0_grouped_0]-Generals/mode/Mode.module.scss
@@ -1,6 +1,6 @@
 @import "../../../../Variables";
 
-.mode-block {
+.modeBlock {
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -8,7 +8,7 @@
   height: auto;
   margin: 75px auto;
 
-  .mode-name {
+  .modeNameWrapper {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -18,7 +18,7 @@
     border: 7px solid $color-1;
     border-radius: 35px;
 
-    h3 {
+    .nameH3 {
       width: auto;
       height: auto;
       margin: 0 auto;
@@ -26,6 +26,7 @@
       font-size: 48px;
       text-align: center;
       color: $color-3;
+      font-family: $fontCustom3;
     }
   }
 
@@ -38,7 +39,7 @@
     margin: auto 75px;
   }
 
-  .h4-mode {
+  .modeInformationH4 {
     width: 400px;
     height: 81px;
     font-size: 22px;
@@ -56,17 +57,17 @@
 }
 
 @media screen and (max-width: 1280px) {
-  .mode-block {
+  .modeBlock {
     .circle {
       width: 24px;
       height: 24px;
       border: 4px solid $color-3;
     }
 
-    .mode-name {
+    .modeNameWrapper {
       border: 5px solid $color-1;
 
-      h3 {
+      .nameH3 {
         font-size: 44px;
       }
     }
@@ -74,9 +75,9 @@
 }
 
 @media screen and (max-width: 1024px) {
-  .mode-block {
-    .mode-name {
-      h3 {
+  .modeBlock {
+    .modeNameWrapper {
+      .nameH3 {
         font-size: 40px;
       }
     }
@@ -85,7 +86,7 @@
       margin: auto 45px;
     }
 
-    .h4-mode {
+    .modeInformationH4 {
       font-size: 20px;
     }
   }
@@ -95,16 +96,16 @@
 }
 
 @media screen and (max-width: 768px) {
-  .mode-block {
+  .modeBlock {
     width: 100%;
     margin: 45px auto;
 
-    .mode-name {
+    .modeNameWrapper {
       border: 5px solid $color-1;
       width: 275px;
       height: 96px;
 
-      h3 {
+      .nameH3 {
         font-size: 30px;
       }
     }
@@ -115,22 +116,22 @@
       margin: auto 25px;
     }
 
-    .h4-mode {
+    .modeInformationH4 {
       font-size: 16px;
     }
   }
 }
 
 @media screen and (max-width: 640px) {
-  .mode-block {
+  .modeBlock {
     flex-direction: column;
     width: 100%;
     margin: 45px auto 45px auto;
 
-    .mode-name {
+    .modeNameWrapper {
       margin: 0 auto;
 
-      .h3 {
+      .nameH3 {
         font-size: 24px;
       }
     }
@@ -142,7 +143,7 @@
       margin: 15px auto;
     }
 
-    .h4-mode {
+    .modeInformationH4 {
       width: 100%;
       text-align: center;
       padding-left: 60px;
@@ -155,15 +156,15 @@
 }
 
 @media screen and (max-width: 360px) {
-  .mode-block {
+  .modeBlock {
     margin: 35px auto 20px auto;
 
-    .mode-name {
+    .modeNameWrapper {
       height: 55px;
       width: 250px;
       border: 5px solid $color-1;
 
-      h3 {
+      .nameH3 {
         font-size: 22px;
       }
     }
@@ -172,7 +173,7 @@
       margin: 10px auto;
     }
 
-    .h4-mode {
+    .modeInformationH4 {
       font-size: 14px;
       padding-left: 20px;
       padding-right: 20px;
