--- a/src/modules/components/button/Button.module.scss
+++ b/src/modules/components/button/Button.module.scss
@@ -9,7 +9,7 @@
   }
 }
 
-.style-button {
+.buttonStyle {
   width: 300px;
   height: 75px;
   line-height: 75px;
@@ -22,6 +22,7 @@
   overflow: hidden;
   position: relative;
   cursor: pointer;
+  font-family: $fontCustom3;
 
   &:before {
     content: " ";
@@ -68,7 +69,7 @@
 }
 
 @media screen and (max-width: 768px) {
-  .style-button {
+  .buttonStyle {
     width: 280px;
     height: 70px;
     line-height: 70px;
@@ -77,7 +78,7 @@
 }
 
 @media screen and (max-width: 640px) {
-  .style-button {
+  .buttonStyle {
     width: 250px;
     height: 55px;
     line-height: 55px;
@@ -86,7 +87,7 @@
 }
 
 @media screen and (max-width: 480px) {
-  .style-button {
+  .buttonStyle {
     width: 215px;
     height: 50px;
     line-height: 50px;
@@ -95,7 +96,7 @@
 }
 
 @media screen and (max-width: 360px) {
-  .style-button {
+  .buttonStyle {
     width: 180px;
     height: 35px;
     line-height: 35px;
