--- a/src/modules/components/warn/Warn.module.scss
+++ b/src/modules/components/warn/Warn.module.scss
@@ -1,6 +1,6 @@
 @import "../../../Variables";
 
-.warn-block {
+.warnBlock {
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -8,13 +8,13 @@
   height: auto;
   line-height: 24px;
 
-  .span-war {
+  .spanIcon {
     width: auto;
     height: auto;
     margin: auto 0;
   }
 
-  .war-h4-auth {
+  .warnInformation {
     padding-left: 10px;
     height: auto;
     line-height: 24px;
@@ -46,13 +46,13 @@
 }
 
 @media screen and (max-width: 480px) {
-  .warn-block {
+  .warnBlock {
     height: auto;
     line-height: 20px;
     min-height: 40px;
     max-height: 150px;
 
-    .war-h4-auth {
+    .warnInformation {
       text-align: center;
       line-height: 1.5;
       font-size: 13px;
@@ -61,7 +61,7 @@
 }
 
 @media screen and (max-width: 360px) {
-  .warn-block {
+  .warnBlock {
     height: auto;
     max-height: 160px;
   }
