--- a/src/modules/pages/general/General.module.scss
+++ b/src/modules/pages/general/General.module.scss
@@ -4,7 +4,7 @@
   display: flex;
   flex-direction: column;
 
-  .row-1 {
+  .rowContainerNumberOne {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -12,13 +12,13 @@
     width: 100%;
     height: 100vh;
 
-    .main-content {
+    .mainContent {
       display: flex;
       flex-direction: column;
       height: 100%;
       width: 100%;
 
-      .main-h1 {
+      .mainTitleH1 {
         margin: 255px auto 0 auto;
         width: auto;
         height: 160px;
@@ -26,15 +26,16 @@
         font-weight: 400;
         font-size: 110px;
         color: $color-3;
+        font-family: $fontCustom1;
 
-        .colored-title-span-1 {
+        .coloredTitleSpanOne {
           color: $color-4;
           font: inherit;
           overflow: hidden;
           position: relative;
         }
 
-        .colored-title-span-2 {
+        .coloredTitleSpanTwo {
           color: $color-1;
           font: inherit;
           overflow: hidden;
@@ -42,7 +43,7 @@
         }
       }
 
-      .main-h3 {
+      .mainTextH3 {
         width: auto;
         font-weight: 400;
         font-size: 25px;
@@ -52,7 +53,7 @@
         color: $color-3;
       }
 
-      .button-container {
+      .buttonContainerWrapper {
         display: flex;
         flex-direction: row;
         justify-content: center;
@@ -63,7 +64,7 @@
     }
   }
 
-  .row-2 {
+  .rowContainerNumberTwo {
     display: flex;
     flex-direction: column;
     width: 100%;
@@ -72,7 +73,7 @@
     padding-top: 125px;
     padding-bottom: 100px;
 
-    .content-info {
+    .contentInformation {
       display: flex;
       flex-direction: row;
       justify-content: space-evenly;
@@ -80,38 +81,39 @@
       width: 100%;
       color: $color-3;
 
-      .info-style {
+      .informationTextDivStyle {
         width: 50%;
         max-width: 550px;
         height: 100%;
         padding: 50px;
 
-        .h2-info {
+        .h2Information {
           font-weight: 400;
           font-size: 48px;
           height: 60px;
           line-height: 60px;
           margin-top: 35px;
           margin-bottom: 35px;
+          font-family: $fontCustom3;
         }
 
-        .h2-left {
+        .leftH2 {
           text-align: left;
         }
 
-        .h2-right {
+        .rightH2 {
           text-align: right;
         }
 
-        .h4-left {
+        .leftH4 {
           text-align: left;
         }
 
-        .h4-right {
+        .rightH4 {
           text-align: right;
         }
 
-        .h4-info {
+        .h4Information {
           font-weight: 400;
           font-style: normal;
           font-size: 20px;
@@ -119,13 +121,13 @@
         }
       }
 
-      .info-img {
+      .informationWrapperImage {
         width: 50%;
         max-width: 550px;
         height: 100%;
         padding: 50px;
 
-        .info-img-wight {
+        .informationImageStyle {
           width: 100%;
           height: auto;
         }
@@ -133,13 +135,13 @@
     }
   }
 
-  .row-3 {
+  .rowContainerNumberThree {
     width: 100%;
     height: auto;
     background: url(../../../bases/assets/webp/background-block.webp);
 
-    .tit-block {
-      .title-h3 {
+    .titleBlock {
+      .titleH3 {
         width: auto;
         height: 80px;
         line-height: 80px;
@@ -149,9 +151,10 @@
         color: $color-3;
         text-transform: uppercase;
         margin-bottom: 15px;
+        font-family: $fontCustom3;
       }
 
-      .title-h4 {
+      .titleH4 {
         height: auto;
         max-width: 550px;
         width: auto;
@@ -164,7 +167,7 @@
       }
     }
 
-    .block-w {
+    .blockWorlds {
       display: flex;
       flex-direction: row;
       justify-content: space-evenly;
@@ -175,7 +178,7 @@
       transition: all 0.5s ease;
       position: relative;
 
-      .hover-me-block {
+      .hoverMeBlock {
         position: absolute;
         width: 500px;
         height: 500px;
@@ -185,7 +188,7 @@
     }
   }
 
-  .row-4 {
+  .rowContainerNumberFour {
     display: flex;
     flex-direction: column;
     background: $color-2;
@@ -193,7 +196,7 @@
     height: auto;
     padding-top: 50px;
 
-    .mode-title {
+    .modeTitle {
       text-align: center;
       width: 100%;
       height: 79px;
@@ -201,24 +204,25 @@
       font-weight: 400;
       font-size: 64px;
       color: $color-3;
+      font-family: $fontCustom3;
     }
   }
 
-  .lin-top {
+  .lineNoContentTop {
     height: 200px;
     width: 100%;
     background: $color-2;
     background: linear-gradient(180deg, $color-2 0%, rgba(228, 0, 127, 0) 100%);
   }
 
-  .lin-bot {
+  .lineNoContentBottom {
     height: 200px;
     width: 100%;
     background: $color-2;
     background: linear-gradient(0deg, $color-2 0%, rgba(1, 22, 37, 0) 100%);
   }
 
-  .lin-top-two {
+  .lineNoContentTopTwo {
     height: 200px;
     width: 100%;
     background: linear-gradient(180deg, $color-2 0%, rgba(255, 255, 255, 0) 100%);
@@ -227,17 +231,17 @@
 
 @media screen and (max-width: 1600px) {
   .main {
-    .row-1 {
-      .main-content {
-        .main-h1 {
+    .rowContainerNumberOne {
+      .mainContent {
+        .mainTitleH1 {
           margin-top: 180px;
         }
       }
     }
 
-    .row-3 {
-      .block-w {
-        .hover-me-block {
+    .rowContainerNumberThree {
+      .blockWorlds {
+        .hoverMeBlock {
           width: 400px;
           height: 400px;
           //left: 750px;
@@ -249,17 +253,17 @@
 
 @media screen and (max-width: 1400px) {
   .main {
-    .row-1 {
-      .main-content {
-        .main-h1 {
+    .rowContainerNumberOne {
+      .mainContent {
+        .mainTitleH1 {
           margin-top: 170px;
         }
       }
     }
 
-    .row-3 {
-      .block-w {
-        .hover-me-block {
+    .rowContainerNumberThree {
+      .blockWorlds {
+        .hoverMeBlock {
           width: 350px;
           height: 350px;
           //left: 690px;
@@ -271,34 +275,34 @@
 
 @media screen and (max-width: 1280px) {
   .main {
-    .row-1 {
-      .main-content {
-        .main-h1 {
+    .rowContainerNumberOne {
+      .mainContent {
+        .mainTitleH1 {
           font-size: 100px;
         }
       }
     }
 
-    .row-2 {
+    .rowContainerNumberTwo {
       padding-top: 85px;
       padding-bottom: 80px;
 
-      .content-info {
+      .contentInformation {
         height: auto;
         margin-bottom: 30px;
 
-        .info-style {
+        .informationTextDivStyle {
           max-width: 500px;
           padding: 40px;
 
-          .h2-info {
+          .h2Information {
             font-size: 44px;
             height: 54px;
             line-height: 54px;
           }
         }
 
-        .info-img {
+        .informationWrapperImage {
           max-width: 500px;
           padding: 40px;
 
@@ -306,19 +310,19 @@
       }
     }
 
-    .row-3 {
-      .tit-block {
-        .title-h3 {
+    .rowContainerNumberThree {
+      .titleBlock {
+        .titleH3 {
           font-size: 54px;
         }
 
-        .title-h4 {
+        .titleH4 {
           font-size: 16px;
         }
       }
 
-      .block-w {
-        .hover-me-block {
+      .blockWorlds {
+        .hoverMeBlock {
           width: 350px;
           height: 350px;
           //left: 670px;
@@ -326,10 +330,10 @@
       }
     }
 
-    .row-4 {
+    .rowContainerNumberFour {
       padding-top: 45px;
 
-      .mode-title {
+      .modeTitle {
         font-size: 54px;
       }
     }
@@ -338,57 +342,57 @@
 
 @media screen and (max-width: 1024px) {
   .main {
-    .row-1 {
-      .main-content {
-        .main-h1 {
+    .rowContainerNumberOne {
+      .mainContent {
+        .mainTitleH1 {
           margin-top: 180px;
           font-size: 82px;
         }
 
-        .main-h3 {
+        .mainTextH3 {
           font-size: 22px;
         }
       }
     }
 
-    .row-2 {
-      .content-info {
+    .rowContainerNumberTwo {
+      .contentInformation {
         padding: 10px;
 
-        .info-style {
+        .informationTextDivStyle {
           padding: 25px;
         }
 
-        .info-img {
+        .informationWrapperImage {
           padding: 25px;
         }
       }
     }
 
-    .row-3 {
-      .tit-block {
-        .title-h3 {
+    .rowContainerNumberThree {
+      .titleBlock {
+        .titleH3 {
           font-size: 54px;
         }
       }
 
-      .block-w {
-        .hover-me-block {
+      .blockWorlds {
+        .hoverMeBlock {
           width: 325px;
           height: 325px;
         }
       }
     }
 
-    .lin-top {
+    .lineNoContentTop {
       height: 160px;
     }
 
-    .lin-bot {
+    .lineNoContentBottom {
       height: 160px;
     }
 
-    .lin-top-two {
+    .lineNoContentTopTwo {
       height: 150px;
     }
   }
@@ -396,11 +400,11 @@
 
 @media screen and (max-width: 960px) {
   .main {
-    .row-3 {
-      .block-w {
+    .rowContainerNumberThree {
+      .blockWorlds {
         flex-wrap: wrap;
 
-        .hover-me-block {
+        .hoverMeBlock {
           width: 300px;
           height: 300px;
           left: 35%;
@@ -412,48 +416,48 @@
 
 @media screen and (max-width: 768px) {
   .main {
-    .row-2 {
-      .content-info {
-        .info-style {
+    .rowContainerNumberTwo {
+      .contentInformation {
+        .informationTextDivStyle {
           padding: 10px;
 
-          .h2-info {
+          .h2Information {
             font-size: 38px;
             margin-top: 20px;
             margin-bottom: 20px;
           }
 
-          .h4-info {
+          .h4Information {
             font-size: 18px;
           }
         }
 
-        .info-img {
+        .informationWrapperImage {
           padding: 10px;
         }
       }
     }
 
-    .row-3 {
-      .tit-block {
-        .title-h3 {
+    .rowContainerNumberThree {
+      .titleBlock {
+        .titleH3 {
           font-size: 46px;
         }
       }
 
-      .block-w {
+      .blockWorlds {
         flex-wrap: wrap;
         max-height: none;
 
-        .hover-me-block {
+        .hoverMeBlock {
           width: 325px;
           height: 325px;
         }
       }
     }
 
-    .row-4 {
-      .mode-title {
+    .rowContainerNumberFour {
+      .modeTitle {
         font-size: 46px;
       }
     }
@@ -462,53 +466,53 @@
 
 @media screen and (max-width: 640px) {
   .main {
-    .row-1 {
-      .main-content {
-        .main-h1 {
+    .rowContainerNumberOne {
+      .mainContent {
+        .mainTitleH1 {
           height: 130px;
           line-height: 130px;
           font-size: 72px;
         }
 
-        .main-h3 {
+        .mainTextH3 {
           font-size: 18px;
         }
       }
     }
 
-    .row-2 {
-      .content-info {
+    .rowContainerNumberTwo {
+      .contentInformation {
         height: auto;
 
-        .info-style {
+        .informationTextDivStyle {
           padding: 8px;
 
-          .h2-info {
+          .h2Information {
             font-size: 32px;
             margin-top: 15px;
             margin-bottom: 15px;
           }
 
-          .h4-info {
+          .h4Information {
             font-size: 14px;
           }
         }
       }
     }
 
-    .row-3 {
-      .tit-block {
-        .title-h3 {
+    .rowContainerNumberThree {
+      .titleBlock {
+        .titleH3 {
           font-size: 42px;
         }
 
-        .title-h4 {
+        .titleH4 {
           font-size: 15px;
         }
       }
 
-      .block-w {
-        .hover-me-block {
+      .blockWorlds {
+        .hoverMeBlock {
           left: 35%;
           width: 275px;
           height: 275px;
@@ -516,21 +520,21 @@
       }
     }
 
-    .row-4 {
-      .mode-title {
+    .rowContainerNumberFour {
+      .modeTitle {
         font-size: 42px;
       }
     }
 
-    .lin-top {
+    .lineNoContentTop {
       height: 130px;
     }
 
-    .lin-bot {
+    .lineNoContentBottom {
       height: 130px;
     }
 
-    .lin-top-two {
+    .lineNoContentTopTwo {
       height: 130px;
     }
   }
@@ -538,38 +542,38 @@
 
 @media screen and (max-width: 480px) {
   .main {
-    .row-1 {
-      .main-content {
-        .main-h1 {
+    .rowContainerNumberOne {
+      .mainContent {
+        .mainTitleH1 {
           margin-top: 210px;
           font-size: 54px;
           height: 94px;
           line-height: 94px;
         }
 
-        .main-h3 {
+        .mainTextH3 {
           font-size: 14px;
           height: 24px;
           line-height: 24px;
         }
 
-        .button-container {
+        .buttonContainerWrapper {
           margin-top: 45px;
         }
       }
     }
 
-    .row-2 {
+    .rowContainerNumberTwo {
       padding-bottom: 50px;
       padding-top: 50px;
 
-      .content-info {
+      .contentInformation {
         flex-direction: column;
 
-        .info-style {
+        .informationTextDivStyle {
           width: 100%;
 
-          .h2-info {
+          .h2Information {
             height: 45px;
             line-height: 45px;
             margin-top: 7px;
@@ -577,51 +581,51 @@
             font-size: 28px;
           }
 
-          .h4-info {
+          .h4Information {
             line-height: 20px;
           }
 
-          .h2-right {
+          .rightH2 {
             text-align: left;
           }
 
-          .h4-right {
+          .rightH4 {
             text-align: left;
           }
 
         }
 
-        .info-img {
+        .informationWrapperImage {
           width: 100%;
           padding: 15px;
         }
       }
 
-      .rev {
+      .reverse {
         flex-direction: column-reverse;
       }
     }
 
-    .row-3 {
-      .tit-block {
-        .title-h3 {
+    .rowContainerNumberThree {
+      .titleBlock {
+        .titleH3 {
           margin-bottom: 5px;
           font-size: 30px;
           line-height: 50px;
           height: 50px;
         }
 
-        .title-h4 {
+        .titleH4 {
           font-size: 14px;
           padding-left: 15px;
           padding-right: 15px;
         }
       }
 
-      .block-w {
+      .blockWorlds {
         padding-top: 60px;
 
-        .hover-me-block {
+        .hoverMeBlock {
           display: none;
         }
       }
@@ -631,15 +635,15 @@
 
 @media screen and (max-width: 360px) {
   .main {
-    .row-1 {
-      .main-content {
-        .main-h1 {
+    .rowContainerNumberOne {
+      .mainContent {
+        .mainTitleH1 {
           font-size: 44px;
           height: 72px;
           line-height: 72px;
         }
 
-        .main-h3 {
+        .mainTextH3 {
           font-size: 12px;
           height: auto;
           line-height: 12px;
@@ -647,22 +651,22 @@
           text-align: center;
         }
 
-        .button-container {
+        .buttonContainerWrapper {
           margin-top: 25px;
         }
       }
     }
 
-    .row-2 {
-      .content-info {
-        .info-style {
-          .h2-info {
+    .rowContainerNumberTwo {
+      .contentInformation {
+        .informationTextDivStyle {
+          .h2Information {
             height: 38px;
             line-height: 38px;
             font-size: 24px;
           }
 
-          .h4-info {
+          .h4Information {
             font-size: 13px;
             line-height: 18px;
           }
@@ -670,27 +674,27 @@
       }
     }
 
-    .row-3 {
-      .tit-block {
-        .title-h3 {
+    .rowContainerNumberThree {
+      .titleBlock {
+        .titleH3 {
           margin-bottom: 15px;
           font-size: 24px;
           line-height: 30px;
           height: 30px;
         }
 
-        .title-h4 {
+        .titleH4 {
           font-size: 12px;
         }
       }
 
-      .block-w {
+      .blockWorlds {
         padding-top: 30px;
       }
     }
 
-    .row-4 {
-      .mode-title {
+    .rowContainerNumberFour {
+      .modeTitle {
         font-size: 24px;
         line-height: 30px;
         height: 30px;
