--- a/src/modules/components/preloader/Preload.module.scss
+++ b/src/modules/components/preloader/Preload.module.scss
@@ -1,9 +1,8 @@
 @import "../../../Variables";
 
 .preloaderWrapper {
-  width: 100%;
-  height: 100%;
-  min-height: 700px;
+  width: auto;
+  height: 80vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
