--- a/src/App.scss
+++ b/src/App.scss
@@ -64,9 +64,10 @@ div#root {
 
 .class-z-index-1000 {
   z-index: 1000;
-  min-height: 600px;
   width: auto;
   max-height: none;
+  min-height: 100vh;
+  height: auto;
 }
 
 .particlesDiv {
