--- a/src/modules/components/preloader/Preload.module.scss
+++ b/src/modules/components/preloader/Preload.module.scss
@@ -1,7 +1,7 @@
 @import "../../../Variables";
 
 .preloaderWrapper {
-  width: auto;
+  width: 100%;
   height: 80vh;
   display: flex;
   flex-direction: column;
