--- a/src/modules/pages/not-found/NotFound.module.scss
+++ b/src/modules/pages/not-found/NotFound.module.scss
@@ -9,25 +9,25 @@
   }
 }
 
-.main-not-found-404 {
+.mainNotFound404 {
   display: flex;
   flex-direction: column;
   width: auto;
   height: auto;
 
-  .all-404 {
+  .Wrapper {
     display: flex;
     width: 100%;
-    height: 100vh;
+    height: 90vh;
 
-    .fof {
+    .notFoundContainer {
       display: flex;
       flex-direction: column;
       justify-content: center;
       width: 100%;
       height: 100%;
 
-      .h1-404 {
+      .TitleH1 {
         font-size: 72px;
         display: flex;
         margin: 0 auto;
@@ -37,7 +37,7 @@
         animation: type 0.5s alternate infinite;
       }
 
-      .inf-404 {
+      .information {
         width: 100%;
         height: auto;
         line-height: 1.1;
@@ -49,7 +49,7 @@
         margin-bottom: 55px;
       }
 
-      .back-404 {
+      .back404 {
         width: 350px;
         height: auto;
         font-weight: 400;
@@ -99,19 +99,19 @@
 
 @media screen and (max-width: 480px) {
   .main-not-404 {
-    .all-404 {
-      .fof {
-        .h1-404 {
+    .Wrapper {
+      .notFoundContainer {
+        .TitleH1 {
           font-size: 64px;
         }
 
-        .inf-404 {
+        .information {
           font-size: 20px;
           padding: 0 10px;
           margin-bottom: 30px;
         }
 
-        .back-404 {
+        .back404 {
           font-size: 14px;
         }
       }
@@ -121,17 +121,17 @@
 
 @media screen and (max-width: 360px) {
   .main-not-404 {
-    .all-404 {
-      .fof {
-        .h1-404 {
+    .Wrapper {
+      .notFoundContainer {
+        .TitleH1 {
           font-size: 54px;
         }
 
-        .inf-404 {
+        .information {
           font-size: 16px;
         }
 
-        .back-404 {
+        .back404 {
           font-size: 13px;
         }
       }
