більша частина кабінету переписана на модульні стилі

--- a/src/modules/components/[0_grouped_0]-Maps-all-comp/Style-maps.scss
+++ b/src/modules/components/[0_grouped_0]-Maps-all-comp/Style-maps.scss
@@ -58,6 +58,11 @@
     margin-top: 20px;
     padding-right: 10px;
 
+    &::-webkit-scrollbar {
+      width: 4px;
+    }
+
+
     .str {
       display: flex;
       flex-direction: row;
