--- a/src/modules/components/[0_grouped_0]-Profile/articles/Articles.module.scss
+++ b/src/modules/components/[0_grouped_0]-Profile/articles/Articles.module.scss
@@ -1,18 +1,19 @@
 @import "../../../../Variables";
 
-.articles-block {
+.articlesBlock {
   display: flex;
   flex-direction: row;
   width: 100%;
   height: 100%;
   padding: 50px;
 
-  .h4-ar {
+  .articlesTitleH4 {
     width: 100%;
     height: 50px;
     line-height: 50px;
     text-align: center;
     color: $color-3;
     font-size: 24px;
+    font-family: $fontCustom2;
   }
 }
