--- a/src/modules/components/[0_grouped_0]-Profile/change-password/Change-password.module.scss
+++ b/src/modules/components/[0_grouped_0]-Profile/change-password/Change-password.module.scss
@@ -1,18 +1,19 @@
 @import "../../../../Variables";
 
-.block-pass {
+.blockPassword {
   display: flex;
   flex-direction: column;
+  justify-content: flex-start;
+  padding: 90px 0 0 0;
   width: 100%;
   height: 100%;
-  padding-top: 50px;
 
-  .pass-h3 {
+  .passwordTitle {
     width: 100%;
-    height: 50px;
-    line-height: 50px;
+    height: 32px;
+    line-height: 32px;
     font-weight: 400;
-    font-size: 20px;
+    font-size: 22px;
     text-align: center;
     color: $color-3;
   }
@@ -21,7 +22,7 @@
     display: flex;
     flex-direction: column;
 
-    .input-pass {
+    .passwordInput {
       width: 350px;
       height: 45px;
       line-height: 45px;
@@ -31,10 +32,8 @@
       border-radius: 5px;
       transition: all 0.25s ease-in-out;
       color: $color-8;
-      padding-left: 10px;
-      padding-right: 10px;
-      margin: 0 auto;
-      margin-top: 20px;
+      padding: 0 10px;
+      margin: 10px auto;
 
       &:hover,
       &:focus,
@@ -58,7 +57,7 @@
       transition: all 0.85s ease;
     }
 
-    .bt-pass {
+    .buttonPasswordSubmit {
       background-color: $color-14;
       cursor: pointer;
       transition: all 0.35s ease;
@@ -67,14 +66,15 @@
       line-height: 50px;
       font-weight: 400;
       font-size: 20px;
-      margin: 0 auto;
-      margin-top: 20px;
+      margin: 20px auto 0 auto;
       color: $color-3;
       border-radius: 15px;
       border: none;
+      font-family: $fontCustom2;
 
       &:hover {
         background: $color-4;
+        color: $color-2;
       }
     }
   }
@@ -99,27 +99,33 @@
 }
 
 @media screen and (max-width: 640px) {
-  .block-pass {
-    .pass-h3 {
+  .blockPassword {
+    .passwordTitle {
       font-size: 18px;
     }
 
-    .bt-pass {
-      width: 200px;
-      height: 35px;
-      line-height: 35px;
-      font-size: 16px;
+    form {
+      .buttonPasswordSubmit {
+        width: 200px;
+        height: 35px;
+        line-height: 35px;
+        font-size: 16px;
+      }
     }
   }
 }
 
 @media screen and (max-width: 480px) {
-  .block-pass {
-    .input-pass {
-      width: 100%;
-      height: 40px;
-      margin-top: 12px;
-      line-height: 40px;
+  .blockPassword {
+    form {
+      .passwordInput {
+        width: 100%;
+        min-width: 0;
+        max-width: none;
+        height: 40px;
+        margin-top: 12px;
+        line-height: 40px;
+      }
     }
   }
 }
