add checkbox password view

--- a/src/modules/components/[0_grouped_0]-Profile/change-password/Change-password.module.scss
+++ b/src/modules/components/[0_grouped_0]-Profile/change-password/Change-password.module.scss
@@ -77,6 +77,55 @@
         color: $color-2;
       }
     }
+
+    .labelWrapperCheckbox {
+      width: auto;
+      height: 22px;
+      margin: 5px auto 0 auto;
+      display: flex;
+      flex-direction: row;
+
+      .checkboxMessage {
+        height: 22px;
+        line-height: 22px;
+        font-size: 14px;
+        font-weight: 400;
+        margin-left: 8px;
+      }
+
+      input[type="checkbox"] {
+        display: none;
+      }
+
+      .checkmark {
+        display: flex;
+        width: 20px;
+        height: 20px;
+        border: 1px solid #ccc;
+        border-radius: 4px;
+        position: relative;
+        vertical-align: middle;
+      }
+
+      .checkmark::before {
+        content: "";
+        display: block;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        width: 13px;
+        height: 13px;
+        background-color: $color-8;
+        border-radius: 2px;
+        opacity: 0;
+        transition: opacity 0.3s ease-in-out;
+      }
+
+      input[type="checkbox"]:checked + .checkmark::before {
+        opacity: 1;
+      }
+    }
   }
 }
 
